<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewPassenger"
        android:layout_width="@dimen/ic_width"
        android:layout_height="@dimen/ic_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dip"
        android:scaleType="centerInside"
        android:src="@drawable/ic_passenger" />

    <ImageView
        android:id="@+id/imageViewAction"
        android:layout_width="@dimen/ic_width"
        android:layout_height="@dimen/ic_height"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerInside"
        android:src="@drawable/btn_passenger_waiting" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageViewPassenger"
        android:text="@string/passenger_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
         />

    <TextView
        android:id="@+id/textViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dip"
        android:layout_toRightOf="@+id/textViewName"
        android:text="@string/passenger_number"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageViewPassenger"
        android:layout_alignLeft="@+id/textViewName"
        android:text="@string/passenger_address"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

</RelativeLayout>