<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
 
    <com.amap.mapapi.map.MapView android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:apiKey="bf095935022d6fb3f3c3e7108fe93ffd09096f30"
    />

<!--     <com.mapabc.mapapi.map.MapView android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:apiKey="c2b0f58a6f09cafd1503c06ef08ac7aeb7ddb91a38ba9a532a8df35f00de473a8548047ae05aaa13"
    />
 -->    
    <RelativeLayout
        android:id="@+id/relativeLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_marginTop="0dip"
		    >
		    
	        <ImageButton
	            android:id="@+id/imageButtonLocation"
	            android:layout_width="@dimen/button_width"
	            android:layout_height="@dimen/button_height"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginTop="@dimen/button_top"
	            android:background="@drawable/bg_button"
	            android:scaleType="centerInside"
	            android:src="@drawable/btn_filter_off" />

		    <ImageButton
            	android:id="@+id/imageButtonPickup"
            	android:layout_width="@dimen/button_width"
            	android:layout_height="@dimen/button_height"
            	android:layout_alignParentRight="true"
            	android:layout_alignParentTop="true"
            	android:layout_marginTop="@dimen/button_top"
            	android:background="@drawable/bg_button"
            	android:scaleType="centerInside"
            	android:src="@drawable/btn_pickup" />

	        
			<ImageButton
			    android:id="@+id/imageButtonPadding"
		   		android:layout_width="80dip"
		    	android:layout_height="@dimen/button_height"
		    	android:layout_alignParentTop="true"
		    	android:layout_centerHorizontal="true"
		    	android:background="@drawable/bg_button"
		    	android:scaleType="centerInside"
		    	android:src="@drawable/btn_traffic_on"
		    	android:visibility="invisible" />


		    

			<ImageButton
			    android:id="@+id/imageButtonTraffic"
		   		android:layout_width="@dimen/button_width"
		    	android:layout_height="@dimen/button_height"
		    	android:layout_alignParentTop="true"
		    	android:layout_toLeftOf="@+id/imageButtonPadding"
		    	android:background="@drawable/bg_button"
		    	android:scaleType="centerInside"
		    	android:src="@drawable/btn_traffic_on"
		    	android:visibility="visible" />


		        
		        
			<ImageButton
			    android:id="@+id/imageButtonVector"
			    android:layout_width="@dimen/button_width"
		    	android:layout_height="@dimen/button_height"
		    	android:layout_alignParentTop="true"
		    	android:layout_toRightOf="@+id/imageButtonPadding"
		    	android:background="@drawable/bg_button"
		    	android:scaleType="centerInside"
		    	android:src="@drawable/btn_map_vector"
		    	android:visibility="visible" />
 
		        
		        
		    
		    		    		    
		    		    
		</RelativeLayout>
        <ImageButton
            android:id="@+id/imageButtonSchedule"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="2dip"
            android:background="@drawable/bg_button"
            android:scaleType="centerInside"
            android:src="@drawable/btn_schedule" />

        <ImageButton
            android:id="@+id/imageButtonCall"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dip"
            android:background="@drawable/bg_button"
            android:scaleType="centerInside"
            android:src="@drawable/btn_call" />

        <ImageButton
            android:id="@+id/imageButtonClear"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dip"
            android:background="@drawable/bg_button"
            android:scaleType="centerInside"
            android:src="@drawable/btn_clear" />

        <ImageButton
            android:id="@+id/imageButtonRoute"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dip"
            android:background="@drawable/bg_button"
            android:scaleType="centerInside"
            android:src="@drawable/btn_route" />
        
          
        </RelativeLayout>
        
    
	<RelativeLayout
            android:id="@+id/relativeLayoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >
        
        <TextView
            android:id="@+id/textViewArriveTime"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/time_arrive"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewBottomMid"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="2dip"
            android:background="@drawable/bg_button"
            android:text="|"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="invisible" />
        
        <TextView
            android:id="@+id/textViewMeters"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/button_top"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/distance_left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />
        
        <TextView
            android:id="@+id/textViewCarNumber"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="@dimen/button_bottom"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/car_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewDriver"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/button_bottom"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/driver"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewMinutes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/time_left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF00" />
        </RelativeLayout>
    
	<RelativeLayout
	    android:id="@+id/relativeLayoutInfo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center" >
            	        <TextView
	            android:id="@+id/textViewInfo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/bg_button"
	            android:gravity="left|center_vertical"
	            android:paddingBottom="@dimen/padding_bottom"
	            android:paddingLeft="@dimen/padding_left"
	            android:paddingRight="@dimen/padding_right"
	            android:paddingTop="@dimen/padding_top"
	            android:text="Large Text"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	            android:textColor="#FFFFFF" />
            
        </RelativeLayout>

	<RelativeLayout
	    android:id="@+id/relativeLayoutProgress"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:visibility="gone" >
            
	        <ProgressBar
	            android:id="@+id/progressBar"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingBottom="@dimen/padding_bottom"
	            android:paddingLeft="@dimen/padding_left"
	            android:paddingRight="@dimen/padding_right"
	            android:paddingTop="@dimen/padding_top" />
            
        </RelativeLayout>
         

	
        <RelativeLayout
            android:id="@+id/relativeLayoutPassenger"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:background="@drawable/bg_list"
            android:orientation="vertical"
            android:visibility="gone" >

    		<TextView
    		    android:id="@+id/textViewTitle"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_alignParentTop="true"
    		    android:layout_centerHorizontal="true"
    		    android:layout_gravity="center_horizontal"
    		    android:layout_margin="10dip"
    		    android:text="Large Text"
    		    android:textAppearance="?android:attr/textAppearanceLarge" />

		    <ImageView
        		android:id="@+id/imageViewSeparator"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/textViewTitle"
        		android:layout_marginLeft="10dip"
        		android:layout_marginRight="10dip"
        		android:scaleType="fitXY"
        		android:src="@drawable/separator" />





    		<ExpandableListView
        		android:id="@+id/expandableListView"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_alignParentLeft="true"
        		android:layout_below="@id/imageViewSeparator"
        		android:layout_margin="10dip" >

    			</ExpandableListView>


    		<ImageButton
        		android:id="@+id/imageButtonBack"
        		android:layout_width="50dip"
        		android:layout_height="50dip"
        		android:layout_alignParentTop="true"
        		android:layout_alignRight="@+id/imageViewSeparator"
        		android:background="@drawable/btn_back"
        		android:scaleType="fitXY"
        		android:src="@drawable/btn_back" />
            	        
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_filter"
            android:visibility="visible" >
            
        </RelativeLayout>
            
        	
</FrameLayout>